--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-01 02:46 -->
+<!-- 2022-12-02 02:46 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,48 +46,48 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org51af464">1. 妙妙文章</a>
+<li><a href="#org52dc62e">1. 妙妙文章</a>
 <ul>
-<li><a href="#org6b2eabc">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#orgb0a6982">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#orgae52d83">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org06b5dff">1.4. 关于编辑器</a></li>
-<li><a href="#org1585185">1.5. 关于代码</a>
+<li><a href="#org875a333">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#org1642d03">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org6fb96b5">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#orgda9d066">1.4. 关于编辑器</a></li>
+<li><a href="#org9ade0ee">1.5. 关于代码</a>
 <ul>
-<li><a href="#orge83e9f9">1.5.1. Lisp</a></li>
+<li><a href="#org08482e8">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org0eface6">1.6. 关于CPU</a></li>
-<li><a href="#orgd8b800c">1.7. 关于算法</a>
+<li><a href="#org95c0b9f">1.6. 关于CPU</a></li>
+<li><a href="#org2df53ca">1.7. 关于算法</a>
 <ul>
-<li><a href="#org2386cd1">1.7.1. 关于随机</a></li>
+<li><a href="#orge99b5a3">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org56d8118">1.8. 关于AI</a></li>
-<li><a href="#org7743c61">1.9. 关于软件</a>
+<li><a href="#org5e8c003">1.8. 关于AI</a></li>
+<li><a href="#org3de4a27">1.9. 关于软件</a>
 <ul>
-<li><a href="#org04353d6">1.9.1. SQLite</a></li>
+<li><a href="#org48bef4b">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgb2d9ee1">1.10. 关于workflow</a></li>
+<li><a href="#org0f7e516">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org02341fc">2. 棒棒视频</a>
+<li><a href="#orgabe4d64">2. 棒棒视频</a>
 <ul>
-<li><a href="#org4cacd71">2.1. Veritasium 真理元素</a></li>
-<li><a href="#orgae2c076">2.2. 迷因水母</a></li>
-<li><a href="#org1d0cbc0">2.3. 各种剧</a></li>
-<li><a href="#org97d1695">2.4. 电影</a></li>
+<li><a href="#orge138b45">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org18d2b53">2.2. 迷因水母</a></li>
+<li><a href="#org35e14f6">2.3. 各种剧</a></li>
+<li><a href="#orgde565b8">2.4. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org38e9563">3. 快乐游戏</a></li>
-<li><a href="#org3a5cbdb">4. 宝藏博主</a></li>
-<li><a href="#org09fd6df">5. 有意思的</a>
+<li><a href="#org9d67d4c">3. 快乐游戏</a></li>
+<li><a href="#org5924837">4. 宝藏博主</a></li>
+<li><a href="#org7c0e2a8">5. 有意思的</a>
 <ul>
-<li><a href="#orge9ba88f">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orgee07b82">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org0ff46c1">6. 我想玩的</a></li>
+<li><a href="#orgac39343">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -96,8 +96,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org51af464" class="outline-2">
-<h2 id="org51af464"><span class="section-number-2">1.</span> <a href="#org51af464">妙妙文章</a></h2>
+<div id="outline-container-org52dc62e" class="outline-2">
+<h2 id="org52dc62e"><span class="section-number-2">1.</span> <a href="#org52dc62e">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -434,7 +434,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org69c49fe">
+<figure id="orga6b99e1">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -498,8 +498,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org6b2eabc" class="outline-3">
-<h3 id="org6b2eabc"><span class="section-number-3">1.1.</span> <a href="#org6b2eabc">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org875a333" class="outline-3">
+<h3 id="org875a333"><span class="section-number-3">1.1.</span> <a href="#org875a333">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -540,8 +540,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-orgb0a6982" class="outline-3">
-<h3 id="orgb0a6982"><span class="section-number-3">1.2.</span> <a href="#orgb0a6982">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org1642d03" class="outline-3">
+<h3 id="org1642d03"><span class="section-number-3">1.2.</span> <a href="#org1642d03">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -571,8 +571,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-orgae52d83" class="outline-3">
-<h3 id="orgae52d83"><span class="section-number-3">1.3.</span> <a href="#orgae52d83">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org6fb96b5" class="outline-3">
+<h3 id="org6fb96b5"><span class="section-number-3">1.3.</span> <a href="#org6fb96b5">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -606,8 +606,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org06b5dff" class="outline-3">
-<h3 id="org06b5dff"><span class="section-number-3">1.4.</span> <a href="#org06b5dff">关于编辑器</a></h3>
+<div id="outline-container-orgda9d066" class="outline-3">
+<h3 id="orgda9d066"><span class="section-number-3">1.4.</span> <a href="#orgda9d066">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -623,8 +623,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org1585185" class="outline-3">
-<h3 id="org1585185"><span class="section-number-3">1.5.</span> <a href="#org1585185">关于代码</a></h3>
+<div id="outline-container-org9ade0ee" class="outline-3">
+<h3 id="org9ade0ee"><span class="section-number-3">1.5.</span> <a href="#org9ade0ee">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -649,8 +649,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-orge83e9f9" class="outline-4">
-<h4 id="orge83e9f9"><span class="section-number-4">1.5.1.</span> <a href="#orge83e9f9">Lisp</a></h4>
+<div id="outline-container-org08482e8" class="outline-4">
+<h4 id="org08482e8"><span class="section-number-4">1.5.1.</span> <a href="#org08482e8">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -673,8 +673,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org0eface6" class="outline-3">
-<h3 id="org0eface6"><span class="section-number-3">1.6.</span> <a href="#org0eface6">关于CPU</a></h3>
+<div id="outline-container-org95c0b9f" class="outline-3">
+<h3 id="org95c0b9f"><span class="section-number-3">1.6.</span> <a href="#org95c0b9f">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -689,8 +689,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-orgd8b800c" class="outline-3">
-<h3 id="orgd8b800c"><span class="section-number-3">1.7.</span> <a href="#orgd8b800c">关于算法</a></h3>
+<div id="outline-container-org2df53ca" class="outline-3">
+<h3 id="org2df53ca"><span class="section-number-3">1.7.</span> <a href="#org2df53ca">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -709,8 +709,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org2386cd1" class="outline-4">
-<h4 id="org2386cd1"><span class="section-number-4">1.7.1.</span> <a href="#org2386cd1">关于随机</a></h4>
+<div id="outline-container-orge99b5a3" class="outline-4">
+<h4 id="orge99b5a3"><span class="section-number-4">1.7.1.</span> <a href="#orge99b5a3">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -724,8 +724,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org56d8118" class="outline-3">
-<h3 id="org56d8118"><span class="section-number-3">1.8.</span> <a href="#org56d8118">关于AI</a></h3>
+<div id="outline-container-org5e8c003" class="outline-3">
+<h3 id="org5e8c003"><span class="section-number-3">1.8.</span> <a href="#org5e8c003">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -735,8 +735,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org7743c61" class="outline-3">
-<h3 id="org7743c61"><span class="section-number-3">1.9.</span> <a href="#org7743c61">关于软件</a></h3>
+<div id="outline-container-org3de4a27" class="outline-3">
+<h3 id="org3de4a27"><span class="section-number-3">1.9.</span> <a href="#org3de4a27">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -747,8 +747,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org04353d6" class="outline-4">
-<h4 id="org04353d6"><span class="section-number-4">1.9.1.</span> <a href="#org04353d6">SQLite</a></h4>
+<div id="outline-container-org48bef4b" class="outline-4">
+<h4 id="org48bef4b"><span class="section-number-4">1.9.1.</span> <a href="#org48bef4b">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -762,8 +762,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgb2d9ee1" class="outline-3">
-<h3 id="orgb2d9ee1"><span class="section-number-3">1.10.</span> <a href="#orgb2d9ee1">关于workflow</a></h3>
+<div id="outline-container-org0f7e516" class="outline-3">
+<h3 id="org0f7e516"><span class="section-number-3">1.10.</span> <a href="#org0f7e516">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -773,8 +773,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org02341fc" class="outline-2">
-<h2 id="org02341fc"><span class="section-number-2">2.</span> <a href="#org02341fc">棒棒视频</a></h2>
+<div id="outline-container-orgabe4d64" class="outline-2">
+<h2 id="orgabe4d64"><span class="section-number-2">2.</span> <a href="#orgabe4d64">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -833,8 +833,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org4cacd71" class="outline-3">
-<h3 id="org4cacd71"><span class="section-number-3">2.1.</span> <a href="#org4cacd71">Veritasium 真理元素</a></h3>
+<div id="outline-container-orge138b45" class="outline-3">
+<h3 id="orge138b45"><span class="section-number-3">2.1.</span> <a href="#orge138b45">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -865,8 +865,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgae2c076" class="outline-3">
-<h3 id="orgae2c076"><span class="section-number-3">2.2.</span> <a href="#orgae2c076">迷因水母</a></h3>
+<div id="outline-container-org18d2b53" class="outline-3">
+<h3 id="org18d2b53"><span class="section-number-3">2.2.</span> <a href="#org18d2b53">迷因水母</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li><p>
@@ -881,8 +881,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org1d0cbc0" class="outline-3">
-<h3 id="org1d0cbc0"><span class="section-number-3">2.3.</span> <a href="#org1d0cbc0">各种剧</a></h3>
+<div id="outline-container-org35e14f6" class="outline-3">
+<h3 id="org35e14f6"><span class="section-number-3">2.3.</span> <a href="#org35e14f6">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -906,8 +906,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org97d1695" class="outline-3">
-<h3 id="org97d1695"><span class="section-number-3">2.4.</span> <a href="#org97d1695">电影</a></h3>
+<div id="outline-container-orgde565b8" class="outline-3">
+<h3 id="orgde565b8"><span class="section-number-3">2.4.</span> <a href="#orgde565b8">电影</a></h3>
 <div class="outline-text-3" id="text-2-4">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -933,7 +933,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="orgf5d1248">
+<figure id="orgba8e91a">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -951,8 +951,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org38e9563" class="outline-2">
-<h2 id="org38e9563"><span class="section-number-2">3.</span> <a href="#org38e9563">快乐游戏</a></h2>
+<div id="outline-container-org9d67d4c" class="outline-2">
+<h2 id="org9d67d4c"><span class="section-number-2">3.</span> <a href="#org9d67d4c">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -982,8 +982,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org3a5cbdb" class="outline-2">
-<h2 id="org3a5cbdb"><span class="section-number-2">4.</span> <a href="#org3a5cbdb">宝藏博主</a></h2>
+<div id="outline-container-org5924837" class="outline-2">
+<h2 id="org5924837"><span class="section-number-2">4.</span> <a href="#org5924837">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -994,7 +994,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org7acc74b">
+<figure id="org1a43fdb">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -1002,8 +1002,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org09fd6df" class="outline-2">
-<h2 id="org09fd6df"><span class="section-number-2">5.</span> <a href="#org09fd6df">有意思的</a></h2>
+<div id="outline-container-org7c0e2a8" class="outline-2">
+<h2 id="org7c0e2a8"><span class="section-number-2">5.</span> <a href="#org7c0e2a8">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1029,8 +1029,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orge9ba88f" class="outline-3">
-<h3 id="orge9ba88f"><span class="section-number-3">5.1.</span> <a href="#orge9ba88f">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orgee07b82" class="outline-3">
+<h3 id="orgee07b82"><span class="section-number-3">5.1.</span> <a href="#orgee07b82">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1042,8 +1042,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org0ff46c1" class="outline-2">
-<h2 id="org0ff46c1"><span class="section-number-2">6.</span> <a href="#org0ff46c1">我想玩的</a></h2>
+<div id="outline-container-orgac39343" class="outline-2">
+<h2 id="orgac39343"><span class="section-number-2">6.</span> <a href="#orgac39343">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1066,7 +1066,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-11-27 09:21</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-01 02:46</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-02 02:46</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
